--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,6 +1,6 @@
 <h2>新增职位</h2>
 
-<%= simple_form_for @job do |f| %>
+<%= simple_form_for [:admin, @job] do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.submit "保存", data:{disable_with:"正在保存.."} %>
