--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -24,7 +24,7 @@
 						<b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">
-						<li><a href="#">jmeter</a></li>
+						<li><a href="/admin/jobs">Admin</a></li>
 						<li><a href="#">EJB</a></li>
 						<li class="divider"></li>
 						<li><%= link_to(content_tag(:i, '退出', class:"fa fa-sign-out"), destroy_user_session_path, method: :delete) %></li>
