--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -4,7 +4,9 @@
   <thead>
     <tr>
       <th>职位</th>
-      <th>描述</th>
+      <th>最低薪资</th>
+      <th>最高薪资</th>
+      <th>联系方式</th>
       <th>更新时间</th>
       <th>操作</th>
     </tr>
@@ -12,10 +14,16 @@
   <tbody>
     <% @jobs.each do |job| %>
       <tr>
-        <td><%= link_to(job.title, admin_job_path(job)) %></td>
-        <td><%= job.description %></td>
+        <td>
+          <%= render_is_hidden_status(job) %>
+          <%= link_to(job.title, admin_job_path(job)) %>
+        </td>
+        <td><%= job.wage_lower %></td>
+        <td><%= job.wage_upper %></td>
+        <td><%= job.contact %></td>
         <td><%= job.updated_at %></td>
         <td>
+
           <%= link_to("编辑", edit_admin_job_path(job), class:"btn btn-info btn-xs") %>
           <%= link_to("删除", admin_job_path(job), method: :delete, class:"btn btn-danger btn-xs", data:{confirm:"确认删除？"}) %>
         </td>
