--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -5,7 +5,9 @@
   <thead>
     <tr>
       <th>职位</th>
-      <th>描述</th>
+      <th>最低薪资</th>
+      <th>最高薪资</th>
+      <th>联系方式</th>
       <th>更新时间</th>
     </tr>
   </thead>
@@ -13,7 +15,9 @@
     <% @jobs.each do |job| %>
       <tr>
         <td><%= link_to(job.title, job_path(job)) %></td>
-        <td><%= job.description %></td>
+        <td><%= job.wage_lower %></td>
+        <td><%= job.wage_upper %></td>
+        <td><%= job.contact %></td>
         <td><%= job.updated_at %></td>
       </tr>
     <% end %>
