--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -23,6 +23,11 @@
         <td><%= job.contact %></td>
         <td><%= job.updated_at %></td>
         <td>
+          <% if job.is_hidden %>
+            <%= link_to("显示", publish_admin_job_path(job), method: :post, class:"btn btn-success btn-xs") %>
+          <% else %>
+            <%= link_to("隐藏", hide_admin_job_path(job), method: :post, class:"btn btn-warning btn-xs") %>
+          <% end %>
 
           <%= link_to("编辑", edit_admin_job_path(job), class:"btn btn-info btn-xs") %>
           <%= link_to("删除", admin_job_path(job), method: :delete, class:"btn btn-danger btn-xs", data:{confirm:"确认删除？"}) %>
