can order by wage_upper&wage_lower&updated_at

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,17 @@
 <h2>所有职位</h2>
 <%= link_to("新增职位", new_job_path, class:"btn btn-success btm.sm") %>
+<div class="btn-group">
+  <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    排序 <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="/jobs?order=by_lower_up">最低薪资从低到高</a></li>
+    <li><a href="/jobs?order=by_lower_down">最低薪资从高到低</a></li>
+    <li><a href="/jobs?order=by_upper_up">最高薪资从低到高</a></li>
+    <li><a href="/jobs?order=by_upper_down">最高薪资从高到低</a></li>
+    <li><a href="/jobs">按发布时间</a></li>
+  </ul>
+</div>
 
 <table class="table table-bordered">
   <thead>
