user can upload resume

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,6 +9,7 @@
     <li><a href="/jobs?order=by_lower_down">最低薪资从高到低</a></li>
     <li><a href="/jobs?order=by_upper_up">最高薪资从低到高</a></li>
     <li><a href="/jobs?order=by_upper_down">最高薪资从高到低</a></li>
+    <li><%= link_to("最高薪资从高多低99", jobs_path(order:"by_upper_down")) %></li>
     <li><a href="/jobs">按发布时间</a></li>
   </ul>
 </div>
