--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,2 +1,3 @@
 <h2><%= @job.title %></h2>
 <h4><%= @job.description %></h4>
+<%= link_to("提交简历", new_job_resume_path(@job), class:"btn btn-success btm.sm") %>
