--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -31,7 +31,7 @@
         <td><%= job.wage_lower %></td>
         <td><%= job.wage_upper %></td>
         <td><%= job.contact %></td>
-        <td><%= job.updated_at %></td>
+        <td><%= job.updated_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
       </tr>
     <% end %>
   </tbody>
