--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
 	<div class="container-fluid">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -8,11 +8,11 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="/jobs">99 Job</a>
+		<a class="navbar-brand" href="/">99 Job</a>
 	</div>
 	<div class="collapse navbar-collapse" id="example-navbar-collapse">
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">iOS</a></li>
+			<li class="active"><a href="/jobs">所有职位</a></li>
 			<li><a href="#">SVN</a></li>
 			<% if !current_user %>
 				<li><%= link_to("注册", new_user_registration_path) %></li>
