--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,94 @@
-<h1>Hello!</h1>
+<style>
+.jumbotron {
+  background-image: url("https://ws4.sinaimg.cn/large/006tNc79gy1flz1pophmbj31hc0u0aer.jpg");
+  margin-top: -20px;
+  padding-bottom: 300px;
+}
+</style>
+
+
+<div class="jumbotron">
+	<div class="container">
+		<h1>欢迎登陆页面！</h1>
+		<p>这是一个超大屏幕（Jumbotron）的实例。</p>
+		<p><a class="btn btn-primary btn-lg" role="button" href="/jobs">
+			学习更多</a>
+		</p>
+	</div>
+</div>
+
+
+<div class="row">
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <img src="https://ws2.sinaimg.cn/large/006tNc79gy1flz1tg9mhyj30go0godgr.jpg"
+                 alt="通用的占位符缩略图">
+            <div class="caption">
+                <h3>缩略图标签</h3>
+                <p>一些示例文本。一些示例文本。</p>
+                <p>
+                    <a href="#" class="btn btn-primary" role="button">
+                        按钮
+                    </a>
+                    <a href="#" class="btn btn-default" role="button">
+                        按钮
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <img src="https://ws2.sinaimg.cn/large/006tNc79gy1flz1tg1acmj30go0gowh4.jpg"
+                 alt="通用的占位符缩略图">
+            <div class="caption">
+                <h3>缩略图标签</h3>
+                <p>一些示例文本。一些示例文本。</p>
+                <p>
+                    <a href="#" class="btn btn-primary" role="button">
+                        按钮
+                    </a>
+                    <a href="#" class="btn btn-default" role="button">
+                        按钮
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <img src="https://ws4.sinaimg.cn/large/006tNc79gy1flz1tfl9evj30go0gomyy.jpg"
+                 alt="通用的占位符缩略图">
+            <div class="caption">
+                <h3>缩略图标签</h3>
+                <p>一些示例文本。一些示例文本。</p>
+                <p>
+                    <a href="#" class="btn btn-primary" role="button">
+                        按钮
+                    </a>
+                    <a href="#" class="btn btn-default" role="button">
+                        按钮
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <img src="https://ws1.sinaimg.cn/large/006tNc79gy1flz1terwbxj30dw0dw3yw.jpg"
+                 alt="通用的占位符缩略图">
+            <div class="caption">
+                <h3>缩略图标签</h3>
+                <p>一些示例文本。一些示例文本。</p>
+                <p>
+                    <a href="#" class="btn btn-primary" role="button">
+                        按钮
+                    </a>
+                    <a href="#" class="btn btn-default" role="button">
+                        按钮
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
